/*
 * This file is part of Shiro J Bot.
 * Copyright (C) 2019-2021  Yago Gimenez (KuuHaKu)
 *
 * Shiro J Bot is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Shiro J Bot is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Shiro J Bot.  If not, see <https://www.gnu.org/licenses/>
 */
//file:noinspection DifferentStdlibGradleVersion

buildscript {
	repositories {
		mavenCentral()
	}
}

plugins {
	id "java"
	id "idea"
	id "application"
	id "org.springframework.boot" version "2.5.3"
	id "io.spring.dependency-management" version "1.0.11.RELEASE"
}

application {
	mainClassName = "com.kuuhaku.Main"
}

group "com.kuuhaku"
version "STANDALONE"
sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16
applicationDefaultJvmArgs = [
		"-Xms512M",
		"-Xmx6G",
		"-XX:+UseZGC",
		"-XX:+UseStringDeduplication",
		"-XX:+HeapDumpOnOutOfMemoryError",
		"-XX:HeapDumpPath=/shiro/ShiroJBot/logs/memdump.hprof",
		"-Dfile.encoding=UTF-8",
		"-Duser.timezone=America/Sao_Paulo",
		"-Djava.awt.headless=true",
		"-Dsun.java2d.opengl=true"
		//,"-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
]

repositories {
	mavenCentral()
	jcenter()
	maven { url "https://jitpack.io" }
	maven { url "https://m2.dv8tion.net/releases" }
}

task stage(dependsOn: ["build", "clean"])
build.mustRunAfter clean

run {
	standardInput = System.in
}

task copyToLib(type: Copy) {
	into "$buildDir/libs"
	from(configurations.implementation)
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
stage.dependsOn(copyToLib)

dependencies {
	//Core
	implementation group: "net.dv8tion", name: "JDA", version: "4.3.0_299"
	implementation group: "com.sedmelluq", name: "lavaplayer", version: "1.3.59"
	implementation group: "com.github.ygimenez", name: "Pagination-Utils", version: '2.3.0'
	implementation group: "club.minnced", name: "discord-webhooks", version: '0.5.7'

	//Database
	implementation group: "org.postgresql", name: "postgresql", version: '42.2.23.jre7'
	implementation group: "org.hibernate", name: "hibernate-core", version: '5.5.4.Final'
	implementation group: "com.mchange", name: "c3p0", version: '0.9.5.5'
	implementation group: "org.hibernate", name: "hibernate-c3p0", version: '5.5.4.Final'

	//Compiler
	implementation group: "org.codehaus.groovy", name: "groovy", version: "3.0.8"

	//Music
	implementation group: "com.sedmelluq", name: "jda-nas", version: "1.1.0"

	//Rest API
	implementation('org.springframework.boot:spring-boot-starter-data-jpa:2.5.3') {
		exclude module: "spring-boot-starter-logging"
	}
	implementation('org.springframework.boot:spring-boot-starter-web:2.5.3') {
		exclude module: "spring-boot-starter-logging"
	}

	//Websocket API
	implementation group: "org.java-websocket", name: "Java-WebSocket", version: '1.5.2'

	//Wrappers
	implementation group: "com.graphql-java", name: "graphql-java", version: '230521-nf-execution'
	implementation group: "com.github.twitch4j", name: "twitch4j", version: '1.5.0'
	implementation group: "com.github.philippheuer.events4j", name: "events4j", version: "0.6.0"
	implementation group: 'com.google.apis', name: 'google-api-services-youtube', version: 'v3-rev20210706-1.32.1'
	implementation group: "org.discordbots", name: "DBL-Java-Library", version: "2.0.1"

	//Apache Commons
	implementation group: "org.apache.commons", name: "commons-lang3", version: '3.12.0'
	implementation group: "org.apache.commons", name: "commons-text", version: "1.9"
	implementation group: "org.apache.commons", name: "commons-math3", version: "3.6.1"
	implementation group: "org.apache.commons", name: "commons-imaging", version: "1.0-alpha2"

	//Logger
	implementation group: "org.slf4j", name: "slf4j-api", version: '1.7.32'
	implementation group: "org.apache.logging.log4j", name: "log4j-api", version: '2.14.1'
	implementation group: "org.apache.logging.log4j", name: "log4j-core", version: '2.14.1'
	implementation group: "org.apache.logging.log4j", name: "log4j-slf4j-impl", version: '2.14.1'
	implementation group: "org.apache.logging.log4j", name: "log4j-jcl", version: '2.14.1'
	implementation group: "org.springframework.boot", name: "spring-boot-starter-log4j2", version: '2.5.3'

	//Util
	implementation group: "com.github.SvenWoltmann", name: "color-thief-java", version: "v1.1.2"
	implementation group: "com.github.liheyuan", name: "simple-emoji-4j", version: "f26d3b39be"
	implementation group: "org.quartz-scheduler", name: "quartz", version: '2.3.2'
	implementation group: "commons-io", name: "commons-io", version: '2.11.0'
	implementation group: "net.coobird", name: "thumbnailator", version: '0.4.14'
	implementation group: "com.github.kevinsawicki", name: "http-request", version: "6.0"
	implementation group: "org.jasypt", name: "jasypt", version: '1.9.3'
	implementation group: "org.threeten", name: "threetenbp", version: '1.5.1'
	implementation group: "org.swinglabs.swingx", name: "swingx-graphics", version: "1.6.5-1"
	implementation group: "org.jetbrains.kotlin", name: "kotlin-stdlib", version: '1.5.21'
	implementation group: "org.knowm.xchart", name: "xchart", version: '3.8.0'
	implementation group: "net.oneandone.reflections8", name: "reflections8", version: "0.11.7"
	implementation group: "com.squareup.moshi", name: "moshi", version: "1.12.0"
	implementation group: "dev.zacsweers.moshix", name: "moshi-records-reflect", version: '0.12.0'
	implementation group: "io.github.furstenheim", name: "copy_down", version: "1.0"
	implementation group: "net.jodah", name: "expiringmap", version: '0.5.10'
	implementation group: "me.xuender", name: "unidecode", version: "0.0.7"
	implementation group: "com.squareup.moshi", name: "moshi-adapters", version: "1.12.0"
}

idea {
	module {
		downloadJavadoc = true
		downloadSources = true
	}
}